# realworld-rust-axum-sqlx-ddd

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  prometheus.yml
.sqlx/: query-00f9e69d007449a1fddbca9d8a4af2ad6e6f328af7180b5654a9c2747f07278b.json  query-01c943169f1d1adec7277889d620f4cfbede316136bcafa05f4a9af9ad2335e0.json  query-022f6bb997c5636a978ccd9325eb199a6bed932f144336c0e79e3d9d17ce61cd.json  query-027b59a76eb58b15584639f659a658c269b289466f236109d74311cb898c15de.json  query-0b11fe8d0455ab1c4a0b3943d53819cedf3186246c42d60371fb5e0b39fc5650.json  query-100b42525115e7a3dbc30ea9153e2171ecf03aeb6252244e2eb5167f80be626a.json  query-18af09541bc05aa981eea9e7a9585ebe03f33397420379f9ac114dc76a00262f.json  query-2034efdd6809abb45c977950394f58d8e10e42701a22cf3f5548c1f0e1c6ece5.json  query-20ffb9a2f9a6ce016fb1c0ed901c850499a352bc9bc717d64f8c475d5cc22bb0.json  query-2a8f53ceeb2d3eb7772110015788b7474fcaf21e9c5c824af822c1b107aa695c.json  query-375b6cdf56cb043622a585941c696c9031c6baa81ac5d13a6be645cbb0cc9863.json  query-3777c0cb276b2b75c1806745a2a637ce5a8f76168ba6e22537025949ad751881.json  query-4e0eebb2b61390baf9f94600d87d89f39f5a4c638cd4296a6ddb309511f64ec9.json  query-5a58b87ca499aa87a75329315a7a2375083ecf6edee54fb69d2d2b7017963e0b.json  query-658799cff4cc000d6c2c09180481e4771232de76e90b5d813f1620b10be7e473.json  query-69ec0b515b66736300d2c59995b9379939df9e02f853a406d44d16c4c66bec3f.json  query-6c40c07c69653387de42b366a9de938a902baab913a7821981fc9fa5ddfa23a5.json  query-6dd53f4e03feae1080cf9833e164501932b4ecfe10f684f9b00733504bdd05a2.json  (+9 more)
example/: .env
(+49 files in other folders)
