[package]
name = "realworld-rust-app"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-email = "3.2.0"
serde_json = "1.0.149"
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
axum-test = "19.1.1"
